logs/turtlesim/build.make.006.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:165:36: error: ‘ang_vel’ was not declared in this scope
   pos_.ry() += std::cos(orient_) * ang_vel;
                                    ^~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:165:36: note: suggested alternative: ‘ang_vel_’
   pos_.ry() += std::cos(orient_) * ang_vel;
                                    ^~~~~~~
                                    ang_vel_
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
